--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@tailwindcss/cli": "^4.1.4",
     "next": "15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "yet-another-react-lightbox": "^3.22.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
