--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-photo-album": "^3.1.0",
     "yet-another-react-lightbox": "^3.22.0"
   },
   "devDependencies": {
